error.txt
    Checking localcode v0.1.0 (C:\Users\admin\Developer\localcode)
error[E0063]: missing field `port` in initializer of `SetupConfig`
   --> src\ui.rs:119:19
    |
119 |         return Ok(SetupConfig { 
    |                   ^^^^^^^^^^^ missing `port`

warning: unused import: `std::io::BufRead`
  --> src\runner.rs:97:9
   |
97 |     use std::io::BufRead;
   |         ^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0063`.
warning: `localcode` (bin "localcode") generated 1 warning
error: could not compile `localcode` (bin "localcode") due to 1 previous error; 1 warning emitted
